--- a/app/templates/college/index.html
+++ b/app/templates/college/index.html
@@ -43,7 +43,7 @@
             {% if colleges %}
                 {% for college in colleges %}
                 <tr class="border-bottom border-light">
-                    <td class="fw-medium" style="word-wrap: break-word; max-width: 0;"><span class="badge bg-info text-dark">{{ college[0] }}</span></td>
+                    <td class="fw-medium" style="word-wrap: break-word; max-width: 0;">{{ college[0] }}</td>
                     <td style="word-wrap: break-word; max-width: 0;">{{ college[1] }}</td>
                     <td>
                         <div class="btn-group btn-group-sm" role="group">
